# devops-image-classifier

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: ci.yml
k8s/: fallback-deployment.yml  fallback-service.yml  main-deployment.yml  main-fallback-ingress.yml  main-service.yml
tests/: test_main.py
