[tool.poetry]
name = "devops-image-classifier"
version = "0.1.0"
description = ""
authors = ["Alina Arslanova <ararslanova@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
torch = "^2.0.1"
torchvision = "^0.15.2"
uvicorn = "^0.23.2"
pillow = "^10.0.1"
python-multipart = "^0.0.6"
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
